--- a/site/v1/index.html
+++ b/site/v1/index.html
@@ -8,12 +8,14 @@
     </script> -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.17.0/vis.min.js"></script>
-    
+
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css">
     <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
    integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
    crossorigin=""></script>
    <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
+   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/vis/4.17.0/vis.min.css'>
+   <link rel='stylesheet' href="https://visjs.org/dist/vis-timeline-graph2d.min.css">
   </head>
   <body>
     <div id="app"></div>
