--- a/site/v1/index.html
+++ b/site/v1/index.html
@@ -13,7 +13,7 @@
    crossorigin=""></script>
    <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/vis/4.17.0/vis.min.css'>
-   <link rel='stylesheet' href="https://visjs.org/dist/vis-timeline-graph2d.min.css">
+   <link rel='stylesheet' href="http://visjs.org/dist/vis-timeline-graph2d.min.css">
     <link rel="stylesheet" href="//cdn.materialdesignicons.com/2.0.46/css/materialdesignicons.min.css">
   </head>
 <body>
