--- a/site/v1/index.html
+++ b/site/v1/index.html
@@ -6,6 +6,7 @@
   <title>The Dalyverse</title>
 
   <!-- MODE == 'T'
+-->
     <script src="http://localhost:8000/axios.min.js"></script>
     <script src="http://localhost:8000/vis.min.js"></script>
     <link rel="stylesheet" href="http://localhost:8000/leaflet.css">
@@ -16,8 +17,7 @@
     <link rel='stylesheet' href='http://localhost:8000/vis.min.css'>
     <link rel='stylesheet' href="http://localhost:8000/vis-timeline-graph2d.min.css">
     <link rel="stylesheet" href="http://localhost:8000/materialdesignicons.min.css">
--->
-<!-- MODE !== 'T' -->
+<!-- MODE !== 'T' 
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.17.0/vis.min.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css">
@@ -28,6 +28,7 @@
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/vis/4.17.0/vis.min.css'>
   <link rel='stylesheet' href="http://visjs.org/dist/vis-timeline-graph2d.min.css">
   <link rel="stylesheet" href="//cdn.materialdesignicons.com/2.0.46/css/materialdesignicons.min.css">
+-->
 
 </head>
 <body>
