--- a/site/v1/index.html
+++ b/site/v1/index.html
@@ -3,23 +3,23 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>The Dalyverse</title>
+  <title>The Andy Dalyverse</title>
 
   <!-- MODE == 'T'
--->
+  -->
 
-    <script src="http://localhost:8000/axios.min.js"></script>
-    <script src="http://localhost:8000/vis.min.js"></script>
-    <link rel="stylesheet" href="http://localhost:8000/leaflet.css">
-    <script src="http://localhost:8000/leaflet.js"
-    integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
-    crossorigin=""></script>
-    <link href="http://localhost:8000/google-fonts.css" rel="stylesheet">
-    <link rel='stylesheet' href='http://localhost:8000/vis.min.css'>
-    <link rel='stylesheet' href="http://localhost:8000/vis-timeline-graph2d.min.css">
-    <link rel="stylesheet" href="http://localhost:8000/materialdesignicons.min.css">
+  <script src="http://localhost:8000/axios.min.js"></script>
+  <script src="http://localhost:8000/vis.min.js"></script>
+  <link rel="stylesheet" href="http://localhost:8000/leaflet.css">
+  <script src="http://localhost:8000/leaflet.js"
+  integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
+  crossorigin=""></script>
+  <link href="http://localhost:8000/google-fonts.css" rel="stylesheet">
+  <link rel='stylesheet' href='http://localhost:8000/vis.min.css'>
+  <link rel='stylesheet' href="http://localhost:8000/vis-timeline-graph2d.min.css">
+  <link rel="stylesheet" href="http://localhost:8000/materialdesignicons.min.css">
 
-<!-- MODE !== 'T' 
+<!-- MODE !== 'T'
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.17.0/vis.min.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css">
@@ -39,8 +39,8 @@
   <div id="map" style="width: 100%;height: 100%;position: fixed;top: 0;right: 0;bottom: 0;left: 0;z-index: 0;"></div>
 
 
-      <div id="app"></div>
-      <!-- built files will be auto injected -->
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
 
 
 </body>
