--- a/site/v1/index.html
+++ b/site/v1/index.html
@@ -18,6 +18,7 @@
   <link rel='stylesheet' href='http://localhost:8000/vis.min.css'>
   <link rel='stylesheet' href="http://localhost:8000/vis-timeline-graph2d.min.css">
   <link rel="stylesheet" href="http://localhost:8000/css/materialdesignicons.min.css">
+  <!-- <link rel="stylesheet" href="css/style.css"> -->
 
 <!-- MODE !== 'T'
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
