--- a/site/v1/index.html
+++ b/site/v1/index.html
@@ -7,20 +7,17 @@
 
 
   <!-- MODE == 'T'
+  -->
   <script src="http://localhost:8000/axios.min.js"></script>
   <script src="http://localhost:8000/vis.min.js"></script>
   <link rel="stylesheet" href="http://localhost:8000/leaflet.css">
-  <script src="http://localhost:8000/leaflet.js"
-  integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
-  crossorigin=""></script>
+  <script src="http://localhost:8000/leaflet.js"></script>
   <link href="http://localhost:8000/google-fonts.css" rel="stylesheet">
   <link rel='stylesheet' href='http://localhost:8000/vis.min.css'>
   <link rel='stylesheet' href="http://localhost:8000/vis-timeline-graph2d.min.css">
   <link rel="stylesheet" href="http://localhost:8000/css/materialdesignicons.min.css">
-  -->
 
 <!-- MODE !== 'T'
--->
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.17.0/vis.min.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
@@ -29,14 +26,11 @@
 <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"
   integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
   crossorigin=""></script>
-  <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css">
-  <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
-  integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
-  crossorigin=""></script> -->
   <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/vis/4.17.0/vis.min.css'>
   <link rel='stylesheet' href="http://visjs.org/dist/vis-timeline-graph2d.min.css">
   <link rel="stylesheet" href="//cdn.materialdesignicons.com/2.0.46/css/materialdesignicons.min.css">
+-->
 
 
 </head>
