--- a/site/v1/index.html
+++ b/site/v1/index.html
@@ -35,14 +35,8 @@
 
 
 </head>
-<body>
-
-  <div id="map" style="width: 100%;height: 100%;position: fixed;top: 0;right: 0;bottom: 0;left: 0;z-index: 0;"></div>
-
-
-  <div id="app"></div>
+<body><div id="map" style="width: 100%;height: 100%;position: fixed;top: 0;right: 0;bottom: 0;left: 0;z-index: 0;"></div>
+<div id="app"></div>
   <!-- built files will be auto injected -->
-
-
 </body>
 </html>
