--- a/site/v1/index.html
+++ b/site/v1/index.html
@@ -35,7 +35,7 @@
 
 
 </head>
-<body>
+<body class="is-marginless is-paddingless">
   <!-- <div id="map" style="width: 100%;height: 100%;position: fixed;top: 0;right: 0;bottom: 0;left: 0;z-index: 0;"></div> -->
 <div id="app" style="width:100%;height:100%;position:fixed;top:0;bottom:0;z-index:1"></div>
   <!-- built files will be auto injected -->
