emitting active from graph to parent

--- a/site/v1/index.html
+++ b/site/v1/index.html
@@ -9,7 +9,7 @@
   <!-- MODE == 'T'
   -->
   <script src="http://localhost:8000/axios.min.js"></script>
-  <script src="http://localhost:8000/vis.min.js"></script>
+  <!-- <script src="http://localhost:8000/vis.min.js"></script> -->
   <link rel="stylesheet" href="http://localhost:8000/leaflet.css">
   <script src="http://localhost:8000/leaflet.js"></script>
   <link href="http://localhost:8000/google-fonts.css" rel="stylesheet">
