ready for theming

--- a/site/v1/index.html
+++ b/site/v1/index.html
@@ -11,10 +11,10 @@
   <script src="http://localhost:8000/axios.min.js"></script>
   <link rel="stylesheet" href="http://localhost:8000/leaflet.css">
   <script src="http://localhost:8000/leaflet.js"></script>
-  <link href="http://localhost:8000/google-fonts.css" rel="stylesheet">
   <link rel='stylesheet' href='http://localhost:8000/vis.min.css'>
   <link rel='stylesheet' href="http://localhost:8000/vis-timeline-graph2d.min.css">
   <link rel="stylesheet" href="http://localhost:8000/css/materialdesignicons.min.css">
+  <script src="http://localhost:8000/vis.min.js"></script>
 
 <!-- MODE !== 'T'
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -28,7 +28,7 @@
   crossorigin=""></script>
   <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/vis/4.17.0/vis.min.css'>
-  <link rel='stylesheet' href="http://visjs.org/dist/vis-timeline-graph2d.min.css">
+  <link rel='stylesheet' href="https://visjs.github.io/vis-timeline/dist/vis-timeline-graph2d.min.css">
   <link rel="stylesheet" href="//cdn.materialdesignicons.com/2.0.46/css/materialdesignicons.min.css">
 -->
 
