--- a/site/v1/index.html
+++ b/site/v1/index.html
@@ -7,7 +7,6 @@
 
 
   <!-- MODE == 'T'
-  -->
   <script src="http://localhost:8000/axios.min.js"></script>
   <link rel="stylesheet" href="http://localhost:8000/leaflet.css">
   <script src="http://localhost:8000/leaflet.js"></script>
@@ -15,11 +14,14 @@
   <link rel='stylesheet' href="http://localhost:8000/vis-timeline-graph2d.min.css">
   <link rel="stylesheet" href="http://localhost:8000/css/materialdesignicons.min.css">
   <script src="http://localhost:8000/vis.min.js"></script>
+  -->
+  
+  <!-- <script src="https://unpkg.com/d3@5.9.1/dist/d3.min.js"></script> -->
 
 <!-- MODE !== 'T'
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+-->
+  <script src="http://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.17.0/vis.min.js"></script>
-  <script src="https://unpkg.com/d3@5.9.1/dist/d3.min.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
   integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
   crossorigin=""/>
@@ -27,10 +29,12 @@
   integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
   crossorigin=""></script>
   <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=K2D&display=swap" rel="stylesheet"> 
+   <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap" rel="stylesheet">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/vis/4.17.0/vis.min.css'>
   <link rel='stylesheet' href="https://visjs.github.io/vis-timeline/dist/vis-timeline-graph2d.min.css">
   <link rel="stylesheet" href="//cdn.materialdesignicons.com/2.0.46/css/materialdesignicons.min.css">
--->
 
 
 </head>
